- Added Russian language;
- Modified for Windows7;

--- a/Source/EyesGuard.Data/EyesGuard.Data.fsproj
+++ b/Source/EyesGuard.Data/EyesGuard.Data.fsproj
@@ -17,6 +17,9 @@
     <None Include="Languages\fa-IR.yml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Languages\ru-RU.yml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Compile Include="Localization.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
